--- a/app-client/app/src/main/res/layout/business_list_item.xml
+++ b/app-client/app/src/main/res/layout/business_list_item.xml
@@ -1,40 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:padding="16dp">
 
     <ImageView
         android:id="@+id/businessImage"
         android:layout_width="50dp"
-        android:layout_height="0dp"
-        android:layout_margin="8dp"
-        android:contentDescription="A monster"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText"
-        tools:src="" />
+        android:layout_height="50dp"
+        android:contentDescription="@string/business_image_content_description"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/nameText"
-        android:layout_width="0dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:gravity="start"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ratingBar"
-        app:layout_constraintStart_toEndOf="@id/businessImage"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="Mingle" />
 
     <RatingBar
@@ -42,9 +32,6 @@
         style="?android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:isIndicator="true"
-        app:layout_constraintBottom_toBottomOf="@id/nameText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/nameText" />
+        android:isIndicator="true" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
