--- a/app-client/app/src/main/res/layout/fragment_search.xml
+++ b/app-client/app/src/main/res/layout/fragment_search.xml
@@ -20,7 +20,7 @@
             android:id="@+id/foodInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/food_category" />
+            android:hint="@string/search" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -55,9 +55,33 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@color/primary"
-        android:text="@string/search"
+        android:text="@string/search_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sortBySpinner" />
+
+    <TextView
+        android:id="@+id/recommended_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/recommended_businesses_label"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchButton" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/recommended_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:spanCount="2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
